# buffett-skills

./: .env  .gitignore  README.md  README.zh.md  fix_evals.py  fix_shares.py  july_9_blast.txt  package-lock.json  plan.md  pyproject.toml  test_aapl_evals.py  test_aapl_evals_fast.py  test_api.py  test_api2.py  test_buyback.py  test_culture.py  test_management.py  todo-wrapper.md  todo.txt
.cache/: _call_single_ollama_model_004f3365c47eace4442bebc4f1231d5c.pkl  _call_single_ollama_model_04c8052452b17e55c9db611e6a9f48e0.pkl  _call_single_ollama_model_065cf14152627200d7afdb76c93d24f1.pkl  _call_single_ollama_model_0825a364b338c714a2334fc9de952c00.pkl  _call_single_ollama_model_09f325c17753b6df264f4f3599c3dab7.pkl  _call_single_ollama_model_185631e7c2332ab113b1054d55f80cbc.pkl  _call_single_ollama_model_20daa1c60f630b36f1045eb5ac0c81f5.pkl  _call_single_ollama_model_22d592bc4fe4087ae845a39b162ea9c6.pkl  _call_single_ollama_model_2409099232b5cf419c006b92cd428edb.pkl  _call_single_ollama_model_284ffd30606bb46418217110c51465fb.pkl  _call_single_ollama_model_36b7b543a1735b4dc7709da664e4f455.pkl  _call_single_ollama_model_36f35b345d3a825187be4bcb9c42bfcc.pkl  _call_single_ollama_model_3705b43d18e9a6c44222822a9dc54fbe.pkl  _call_single_ollama_model_42ba96a96064ac6b8732a47f5dc59274.pkl  _call_single_ollama_model_4a95001c8598d87e55d70c587b3ee9ab.pkl  _call_single_ollama_model_4b847e72bc4e70328653d7449826426e.pkl  _call_single_ollama_model_4f5e40ff975b17a800c9cabc50abb9a0.pkl  _call_single_ollama_model_50abf1b6f10b7c6dc3b0b4e3c35932d6.pkl  (+169 more)
scripts/: run_universe.sh  (+1 more)
src/: run.py  (+22 more)
(+3479 files in other folders)
